Add completion screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Decanting</string>
     <string name="level_one">Level one</string>
+    <string name="level_two">Level Two</string>
+    <string name="level_three">Level Three</string>
 </resources>
