--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
     <string name="play_now">Play Now</string>
     <string name="about">About</string>
     <string name="about_message">This app is created by Horatiu Lazu, a student at the University of Waterloo pursuing a degree in Computer Science. The purpose of this app is to allow players to enjoy the classic puzzle game of decanting, which involves players manipulating jugs of water to output a specific quantity. The solver engine was created using a top-down breadth-first-search algorithm that caches states to ensure performance. \n\nIf you have questions regarding the product, contact me at horatiulazu@gmail.com</string>
-    <string name="level_selection"><u>Level Selection</u></string>
-    <string name="level_configuration"><u>Level Configuration</u></string>
+    <string name="level_selection">Level Selection</string>
+    <string name="level_configuration">Level Configuration</string>
     <string name="zero">0</string>
-    <string name="main_menu"><u>Main Menu</u></string>
-    <string name="highscores"><u>Highscores</u></string>
+    <string name="main_menu">Main Menu</string>
+    <string name="highscores">Highscores</string>
 </resources>
