Add documentation, code cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,29 @@
     <string name="zero">0</string>
     <string name="main_menu">Main Menu</string>
     <string name="highscores">Highscores</string>
+    <string name="date">Date</string>
+    <string name="performance_rating">Performance Rating</string>
+    <string name="moves">Moves</string>
+    <string name="player">Player</string>
+    <string name="level">Level</string>
+    <string name="level_three_text">LEVEL THREE</string>
+    <string name="level_four_text">LEVEL FOUR</string>
+    <string name="level_five_text">LEVEL FIVE</string>
+    <string name="level_two_text">LEVEL TWO</string>
+    <string name="level_one_text">LEVEL ONE</string>
+    <string name="level_six_text">LEVEL SIX</string>
+    <string name="level_seven_text">LEVEL SEVEN</string>
+    <string name="level_eight_text">LEVEL EIGHT</string>
+    <string name="level_nine_text">LEVEL NINE</string>
+    <string name="level_ten_text">LEVEL TEN</string>
+    <string name="custom_level">Custom Level</string>
+    <string name="high_scores">High Scores</string>
+    <string name="settings">Settings</string>
+    <string name="current_player_name">Current Player Name:</string>
+    <string name="anonymous">Anonymous</string>
+    <string name="adjust_difficulty">Adjust Difficulty</string>
+    <string name="_5">5</string>
+    <string name="level_generator_difficulty">Level Generator Difficulty:</string>
+    <string name="adjust_player_name">Adjust Player Name</string>
+    <string name="you_finished_in_0_moves_best_solution_is_0_moves">You finished in 0 moves. Best solution is 0 moves.</string>
 </resources>
